--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,12 @@ layout: default
   </h1>
 </header>
 <div class="content post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <div class="post-date">
-    <time>{{ page.date | date_to_string }}</time>
-  </div>
-  {{ content }}
+    <div class="post-breadcrumb">
+        <a href="/">Back</a>
+    </div>
+    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="post-date">
+        <time>{{ page.date | date_to_string }}</time>
+    </div>
+    {{ content }}
 </div>
