--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,9 @@
 layout: default
 ---
 <header class="masthead">
-  <h1 class="masthead-title--small">
-    <a href="{{ site.baseurl }}/">{{ site.name }}</a>
-  </h1>
+    {% include nav.html %}
 </header>
 <div class="content post">
-    <div class="post-breadcrumb">
-        <a href="/">Back</a>
-    </div>
     <h1 class="post-title">{{ page.title }}</h1>
     <div class="post-date">
         <time>{{ page.date | date_to_string }}</time>
