--- a/style.scss
+++ b/style.scss
@@ -392,11 +392,18 @@ tbody tr:nth-child(odd) th {
       }
     }
   }
+
   &-post-date {
     margin-bottom: 1rem;
     font-size: .75rem;
     text-transform: uppercase;
   }
+}
+
+.content.post .post-date {
+
+    margin-bottom: 1rem;
+
 }
 
 .projects-list {
