--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,12 @@
 <footer>
-    Made with love, powered by <a href="https://jekyllrb.com" target="_blank">Jekyll</a>
+    <div class="row colophon">
+        <div class="col-12">
+
+        </div>
+    </div>
+    <div class="row smallwritings">
+        <div class="col-12">
+            <p>{{ site.time | date: '%Y' }} Emanuele Guicciardi<br />Generated with <span class="icon-heart" style="color:red;"></span> by <a href="https://jekyllrb.com" title="Jekyll" target="_blank">Jekyll</a></p>
+        </div>
+    </div>
 </footer
