--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,11 @@
 ---
-layout: default
+layout: page
 ---
-<header class="masthead">
-    {% include nav.html %}
-</header>
-<div class="content page">
-  <h1 class="page-title">{{ page.title }}</h1>
-  {{ content }}
+<div id="page">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="page-title">{{ page.title }}</h1>
+      {{ content }}
+    </div>
+  </div>
 </div>
