--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,18 +1,11 @@
 ---
-layout: default
+layout: page
 ---
-<header class="masthead">
-  {% include nav.html %}
-</header>
-<div class="content page">
-  {% for experiences in site.experiences %}
-    <h2>{{ experiences.title }}</h2>
-    {{experienxces.start}} - {{experienxces.stop}}
-    <p>{{ experiences.content | markdownify }}</p>
-  {% endfor %}
+<div id="page">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="page-title">{{ page.title }}</h1>
+      {{ content }}
+    </div>
+  </div>
 </div>
-
-
-
-<h1 class="page-title">{{ page.title }}</h1>
-{{ content }}
