--- a/style.scss
+++ b/style.scss
@@ -19,28 +19,10 @@ body {
   font-size: 1em;
   line-height: 1.75em;
   font-weight: 300;
-  color: #515151;
+  color: #FFF;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
-
-}
-
-.container.small {
-
-  max-width: 760px;
-
-}
-
-footer {
-
-  text-align: center;
-
-}
-
-a {
-
-  text-decoration: none;
 
 }
 
@@ -68,6 +50,228 @@ h4 {
 }
 
 p {
+
+    display: block;
     font-size: 1em;
     line-height: 1.75em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+}
+
+.label {
+    color: #134db6;
+    font-size: 0.75em;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.container.small {
+
+  max-width: 760px;
+
+}
+
+#homepage .page-title h1,
+#homepage .page-title h2 {
+  
+  margin: 0;
+  padding: 0;
+  font-size: 2em;
+  font-weight: 300;
+
+}
+
+#homepage .page-title h1 a {
+
+  text-decoration: none;
+
+}
+
+#homepage .page-title h1 {
+
+  font-weight: 700;
+
+}
+
+#homepage h3.list-post-title {
+
+  font-size: 1rem;
+  margin: 0px;
+
+}
+
+#homepage .resume {
+
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+
+}
+
+#homepage .resume .resume-item {
+
+  margin: 0 0 20px 0;
+
+}
+
+#homepage .resume .date {
+
+    font-size: 0.9em;
+    color: rgba(34,36,39,0.5);
+
+}
+
+#homepage .resume .position {
+
+    font-size: 0.9em;
+    font-weight: 700;
+    margin: 4px 0;
+
+}
+
+#homepage .resume .company {
+  
+  font-size: 0.9em;
+
+}
+
+#homepage .skills .skill-group {
+
+  margin: 0 0 20px 0;
+
+}
+
+#homepage .skills .skill-group-name {
+
+  font-size: 0.9em;
+  font-weight: 700;
+  margin: 4px 0;
+
+}
+
+#homepage .skills .skill-name {
+  
+  font-size: 0.9em;
+
+}
+
+#post h1.page-title {
+
+  margin-bottom: 0;
+  padding: 0;
+
+}
+
+#homepage .list .list-item {
+
+  margin-bottom: 20px;
+
+}
+
+#homepage .list .list-post-date {
+
+  font-size: 0.9em;
+  font-weight: 300;
+
+}
+
+footer {
+
+  text-align: right;
+
+}
+
+a {
+
+  text-decoration: none;
+  /* text-decoration-color: #cccccc; */
+
+}
+
+a.nodec {
+
+  text-decoration: none;
+
+}
+
+/*******
+ * ICOMOON
+ *******/
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?4j5klb');
+  src:  url('fonts/icomoon.eot?4j5klb#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?4j5klb') format('truetype'),
+    url('fonts/icomoon.woff?4j5klb') format('woff'),
+    url('fonts/icomoon.svg?4j5klb#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-floppy-disk:before {
+  content: "\e962";
+}
+.icon-earth:before {
+  content: "\e9ca";
+}
+.icon-link:before {
+  content: "\e9cb";
+}
+.icon-heart:before {
+  content: "\e9da";
+}
+.icon-arrow-up-left2:before {
+  content: "\ea39";
+}
+.icon-arrow-up2:before {
+  content: "\ea3a";
+}
+.icon-arrow-up-right2:before {
+  content: "\ea3b";
+}
+.icon-arrow-right2:before {
+  content: "\ea3c";
+}
+.icon-arrow-down-right2:before {
+  content: "\ea3d";
+}
+.icon-arrow-down2:before {
+  content: "\ea3e";
+}
+.icon-arrow-down-left2:before {
+  content: "\ea3f";
+}
+.icon-arrow-left2:before {
+  content: "\ea40";
+}
+.icon-embed2:before {
+  content: "\ea80";
+}
+.icon-github:before {
+  content: "\eab0";
+}
+.icon-linkedin:before {
+  content: "\eac9";
 }
