Bundler integration and..
- Bundler integration
- Gemfile
- Support for external link post's
- Contact page
- Social icons (Github and Linkedin)
- New post on YAML formatting

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
 <footer>
     <div class="row colophon">
         <div class="col-12">
+            <a href="/contact"><span class="icon-floppy-disk"></span></a>
+            <a href="//github.com/eguicciardi" target="_blank"><span class="icon-github"></span></a>
+            <a href="//www.linkedin.com/in/emanueleguicciardi" target="_blank"><span class="icon-linkedin"></span></a>
 
         </div>
     </div>
