--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,4 +1,4 @@
 <div class="intro">
     I'm a full stack web developer based in Tuscany. <br />
-    Currently I'm serving as head of DevOps and senior developer at <a href="https://www.tesecom.it" target="_blank">Tesecom</a> in Pisa.
+    Currently I'm a senior developer at [Lifetronic](https://www.lifetronic.it) in Pisa.
 </div>
